fix: red bg with white text did not meet min-contrast threshold for readability. Moves #red-bg into color:black group

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,14 +44,13 @@
     background-color: #ccc;
 }
 
-#red-bg,
 #black-bg,
 #brown-bg,
 #purple-bg {
     color: #fafafa;
 }
 
-#orange-bg, #yellow-bg, #green-bg, #blue-bg, #white-bg {
+#red-bg, #orange-bg, #yellow-bg, #green-bg, #blue-bg, #white-bg {
     color:#000;
 }
 
